# GameHub

./: README.md
backend/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/public/: gamepage.html  index.html
frontend/src/: app.rs  index.css  main.rs
frontend/src/components/: games.rs  loading.rs  mod.rs  nav.rs  text_area.rs  text_input.rs
frontend/src/routes/: discovery.rs  friends.rs  home.rs  login.rs  mod.rs  play.rs  profile.rs  register.rs  user_profile.rs
frontend/src/services/: auth.rs  login.rs  mod.rs  requests.rs  user.rs
html/: edit.html  friendList.html  game1.html  game2.html  game3.html  gamepage.html  index.html  login.html  profile.html  register.html
html/css/: gamepage.css  index.css  login.css  styles.css
microservices/: Cargo.toml
microservices/auth/: Cargo.toml
microservices/auth/src/: auth.rs  error.rs  login.rs  macros.rs  main.rs  register.rs
microservices/auth/src/routes/: login.rs  mod.rs  refresh.rs  register.rs
microservices/auth/src/util/: auth.rs  macros.rs  mod.rs
microservices/jwt-authorizer/: Cargo.toml
microservices/jwt-authorizer/src/: main.rs
microservices/src/: lib.rs  main.rs
microservices/users/: Cargo.toml
microservices/users/src/: main.rs
microservices/users/src/routes/: me.rs  mod.rs  util.rs
microservices/users/src/util/: auth.rs  macros.rs
microservices/util/: Cargo.toml
microservices/util/src/: auth.rs  error.rs  lib.rs  macros.rs
