[package]
name = "gamehub-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-dynamodb = "0.21.0"
aws-config = "0.51.0"

util = { path = "../util" }
bcrypt = "0.13.0"
