[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
serde = "1.0.149"
serde_json = "1.0.89"
thiserror = "1.0.37"
